<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myfirstapplicaction.miguel.secondboston.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9B26AF">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/InsertEmail"
        android:width="320dp"
        android:layout_below="@+id/SignIn"
        android:layout_centerHorizontal="true"
        android:hint="@string/write_your_email"
        android:layout_marginTop="94dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/InsertPassword"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/InsertEmail"
        android:layout_alignStart="@+id/InsertEmail"
        android:hint="@string/passwordMain"
        android:width="320dp"/>

    <TextView
        android:text="@string/signInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SignIn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LogInButton"
        android:onClick="LogInRoutine"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/InsertPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/register_now_for_free"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/RegisterButton"
        android:layout_below="@+id/LogInButton"
        android:layout_centerHorizontal="true"
        android:onClick="register"
        android:layout_marginTop="16dp" />

    <TextView
        android:textSize="18sp"
        android:textColor="#68EFAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/SomethingWentWrong"
        android:layout_below="@+id/InsertPassword"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
