<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9B26AF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myfirstapplicaction.miguel.secondboston.SecondActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:width="320dp"
        android:hint="@string/choose_a_secure_password"
        android:id="@+id/ChoosePassword"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/ChooseEmail"
        android:layout_alignStart="@+id/ChooseEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:width="320dp"
        android:hint="@string/valid_email_hint"
        android:id="@+id/ChooseEmail"
        android:layout_marginBottom="68dp"
        android:layout_above="@+id/ChoosePassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/register_text"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterNow"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SUBMIT"
        android:layout_below="@+id/ChoosePassword"
        android:layout_centerHorizontal="true"
        android:onClick="submit"
        android:layout_marginTop="68dp" />

    <TextView
        android:textSize="18sp"
        android:textColor="#68EFAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ChoosePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/SomethingWentWrong" />
</RelativeLayout>
